Refactor imports: Organize imports for better readability and professionalism

--- a/1_scripts_122024.ipynb
+++ b/1_scripts_122024.ipynb
@@ -45,17 +45,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports de la bibliothèque standard\n",
     "import os\n",
+    "import time\n",
+    "\n",
+    "# Imports des bibliothèques tierces\n",
     "import numpy as np\n",
-    "from tensorflow.keras.utils import Sequence\n",
-    "import matplotlib.pyplot as plt\n",
-    "from tensorflow.image import flip_left_right, adjust_brightness, adjust_contrast\n",
     "import tensorflow as tf\n",
+    "from tensorflow.keras.utils import Sequence\n",
     "from tensorflow.keras.layers import Input, Conv2D, MaxPooling2D, UpSampling2D, Concatenate, Dropout\n",
     "from tensorflow.keras.models import Model, load_model\n",
     "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping, ReduceLROnPlateau, TensorBoard\n",
     "from tensorflow.keras.applications import VGG16\n",
-    "import time\n",
+    "from tensorflow.image import flip_left_right, adjust_brightness, adjust_contrast\n",
+    "import matplotlib.pyplot as plt\n",
     "from PIL import Image"
    ]
   },
